main scss changes - header and threeColumns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import "settings/fonts";
 @import "settings/colors";
 @import "settings/Normalize";
+@import "./header";
+@import "./threeColumns";
 
 body {
     font-family: $font-base;
