added FourSteps component to main scss

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "settings/Normalize";
 @import "./header";
 @import "./threeColumns";
+@import "./fourSteps";
 
 body {
     font-family: $font-base;
