_aboutUs partial added to main scss

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./header";
 @import "./threeColumns";
 @import "./fourSteps";
+@import "./aboutUs";
 
 body {
     font-family: $font-base;
