--- a/src/scss/_aboutUs.scss
+++ b/src/scss/_aboutUs.scss
@@ -1,14 +1,12 @@
 .aboutUs{
     padding-top: 4%;
     display: flex;
-    // flex-direction: row;
+    flex-direction: row;
     width: 100%;
-    height: 95vh;
     
     .square{
         background-color: red;
         max-width: 50%;
-        max-height: 100%;
         
     }
     .description{
@@ -25,14 +23,14 @@
             padding-top: 3%;
             
         }
-        .sig{
+        img:last-child{
             margin-left: 50%;
             margin-top: 10%;
         }
     }
     .photo{
-        background: url('../assets/People.jpg') no-repeat left / 100% 100%;
+        background: url('../assets/People.jpg') no-repeat center / cover;
         width: 100%;
-        height: 100%;
+
     }
 }
