--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,20 +10,17 @@ header {
         width: 50%;
         display: flex;
         flex-direction: column;
-        align-items: stretch;
+        // align-items: stretch;
         .topMenu{
         display: flex;
         flex-direction: column;
         .loginRegister{
-            // display: flex;
-            // flex-direction: row;
-            // justify-content: flex-end;
             ul{
                 display: flex;
-                // flex-direction: row;
+                flex-direction: row;
                 justify-content: flex-end;
+                align-items: center;
                 li{
-                    display: inline-block;
                     list-style-type: none;
                     font-size: 87%;
                     padding: 1%;
@@ -31,7 +28,6 @@ header {
                     a{
                         text-decoration: none;
                         color: black;
-                        max-height: 1rem;
                     }
                 }
                 li:hover{
@@ -51,8 +47,7 @@ header {
                 flex-direction: row;
                 justify-content: flex-end;
                 li{
-                    display: inline-block;
-                    height: 1.5rem;
+                    // line-height: 1.5rem;
                     list-style-type: none;
                     font-size: 112%;
                     padding: 1%;
