changes for WhoWeHelp

--- a/src/scss/_fourSteps.scss
+++ b/src/scss/_fourSteps.scss
@@ -5,6 +5,10 @@
     padding-top: 2%;
     width: 100%;
     .decoration{
+        h1{
+            font-weight: 400;
+            font-size: 237%;
+        }
         text-align: center;
         padding-bottom: 2%;
     }
