--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./threeColumns";
 @import "./fourSteps";
 @import "./aboutUs";
+@import "./whoWeHelp";
 
 body {
     font-family: $font-base;
