--- a/src/scss/_aboutUs.scss
+++ b/src/scss/_aboutUs.scss
@@ -14,6 +14,8 @@
         background-color: #F0F1F1;
         color: #3C3C3C;
         h1{
+            font-weight: 400;
+            font-size: 237%;
             padding-top: 20%;
         }
         p{
