--- a/src/scss/_whoWeHelp.scss
+++ b/src/scss/_whoWeHelp.scss
@@ -3,8 +3,9 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 70%;
-    height: 100vh;
+    max-height: 100vh;
     margin: auto;
+    padding-bottom: 2%;
     h3{
         width: 60%;
         text-align: center;
@@ -57,7 +58,6 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        
         ul{
             display: flex;
             flex-direction: column;
