--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,6 +1,43 @@
 .contact{
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     height: 100vh;
     width: 100%;
-    background:  white url('../assets/Background-Contact-Form.jpg') no-repeat left / 100% auto;
+    position: relative;
+    z-index: 1;
+    .copyrights{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        // padding-bottom: .5%;
+        h3{
+            margin: 0;
+        }
+    }
+    
+    .background{
+        background-color: white;
+        background-image: url('../assets/Background-Contact-Form.jpg');
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: .4;
+        width: 100%;
+        height: 100%;
+    }
+    .rightSideContentBox{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-right: 7%;
+        min-height: 100%;
+        width: 30%;
+    }
 }
