--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -11,7 +11,6 @@
         bottom: 0;
         left: 50%;
         transform: translate(-50%, -50%);
-        // padding-bottom: .5%;
         h3{
             margin: 0;
         }
@@ -33,6 +32,10 @@
         height: 100%;
     }
     .rightSideContentBox{
+        .formSuccesfull{
+            color: green;
+            font-size: 80%;
+        }
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -44,7 +47,6 @@
             flex-direction: column;
             justify-content: center;
             text-align: center;
-            // padding-top: 4%;
             color: #3C3C3C;
             h1{
                 text-align: center;
@@ -53,6 +55,10 @@
             }
         }
         form{
+            span{
+                font-size: 70%;
+                color: red;
+            }
             display: flex;
             width: 100%;
             height: 50%;
@@ -91,6 +97,10 @@
                     height: 100%;
                     padding-bottom: 1%;
                     padding-top: 10%;
+                    span{
+                        font-size: 70%;
+                        color: red;
+                    }
                 }
                 textarea{
                     outline: 0;
@@ -109,9 +119,7 @@
                 padding-right: 2%;
                 input{
                     width: 30%;
-                    // border-style: none;
                     background-color: white;
-                    // border-color: ;
                     border: 0.75px solid #3C3C3C;
                 }
                 input:hover{
