contact style finished

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -34,7 +34,8 @@
     .rightSideContentBox{
         .formSuccesfull{
             color: green;
-            font-size: 80%;
+            font-size: 180%;
+            text-align: center;
         }
         display: flex;
         flex-direction: column;
