--- a/src/scss/_fourSteps.scss
+++ b/src/scss/_fourSteps.scss
@@ -1,52 +1,54 @@
-.fourStepsContainer{
+.fourStepsContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-top: 2%;
     width: 100%;
-    .decoration{
-        h1{
+    .decoration {
+        h1 {
             font-weight: 400;
             font-size: 237%;
         }
         text-align: center;
         padding-bottom: 2%;
     }
-    .simpleSteps{
+    .simpleSteps {
         padding-top: 3%;
         padding-bottom: 3%;
-        background-color: #F0F1F1;
+        background-color: #f0f1f1;
         max-height: 50%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        .iconBox{
+        .iconBox {
             max-width: 10%;
             text-align: center;
-            img, h3, p {
+            img,
+            h3,
+            p {
                 padding: 2%;
                 margin: 0;
             }
-            hr{
+            hr {
                 width: 50%;
             }
         }
     }
-    .giveAwayFlexBox{
-        a{
+    .giveAwayFlexBox {
+        a {
             text-decoration: none;
             color: black;
         }
         display: flex;
         justify-content: center;
         padding-top: 2%;
-        button{
-            border: 0.75px solid #3C3C3C;
+        button {
+            border: 0.75px solid #3c3c3c;
             max-width: 15%;
             font-size: 225%;
             background-color: white;
         }
-        button:hover{
+        button:hover {
             cursor: pointer;
         }
     }
